# survailence

./: main.py  pyproject.toml
src/: audio_input.py  audio_output.py  hand_tracker.py  llm_engine.py
utils/tools/: music_tool.py
